<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="order_button">Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="cream">Whipped Cream</string>
    <string name="toppings">Toppings</string>
    <string name="chocolate">Chocolate</string>
    <string name="customer_name">Enter Your Name</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g>  </string>
    <string name="order_quantity">Quantity: <xliff:g id="quantity" example="4">%d</xliff:g> </string>
    <string name="order_total_price">Total: <xliff:g id="price" example="$20">%s</xliff:g></string>
    <string name="add_cream">Add Whipped Cream? <xliff:g id="cream" example="true">%b</xliff:g></string>
    <string name="add_chocolate">Add Chocolate? <xliff:g id="chocolate" example="true">%b</xliff:g></string>
    <string name="thank_you">Thank You!</string>
</resources>
