<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.herokuapp.raydashapp.justjava.MainActivity">

    <EditText
        android:id="@+id/customer_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customer_name"
        android:inputType="textCapWords" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_top_margin"
        android:layout_marginTop="@dimen/left_top_margin"
        android:text="@string/toppings"
        android:textAllCaps="true" />

    <CheckBox
        android:id="@+id/whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_top_margin"
        android:layout_marginTop="@dimen/left_top_margin"
        android:text="@string/cream"
        android:paddingLeft="@dimen/checkbox"
        android:textSize="@dimen/digit_size"
        android:textAppearance="?android:textAppearanceSmall" />

    <CheckBox
        android:id="@+id/chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_top_margin"
        android:layout_marginTop="@dimen/left_top_margin"
        android:text="@string/chocolate"
        android:paddingLeft="@dimen/checkbox"
        android:textSize="@dimen/digit_size"
        android:textAppearance="?android:textAppearanceSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_top_margin"
        android:layout_marginTop="@dimen/left_top_margin"
        android:text="@string/quantity"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/left_top_margin"
            android:layout_marginTop="@dimen/left_top_margin"
            android:onClick="decrement"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/quantity"
            android:layout_marginTop="@dimen/left_top_margin"
            android:text="0"
            android:textColor="@color/qty_digit"
            android:textSize="@dimen/digit_size" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/left_top_margin"
            android:layout_marginTop="@dimen/left_top_margin"
            android:onClick="increment"
            android:text="@string/plus" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_top_margin"
        android:layout_marginTop="@dimen/left_top_margin"
        android:text="@string/order_summary"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_top_margin"
        android:layout_marginTop="@dimen/left_top_margin"
        android:text="0"
        android:textColor="@color/qty_digit" />

    <TextView
        android:id="@+id/message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_top_margin"
        android:layout_marginTop="@dimen/left_top_margin"
        android:gravity="center"
        android:textColor="@color/qty_digit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_top_margin"
        android:layout_marginTop="@dimen/left_top_margin"
        android:onClick="submitOrder"
        android:text="@string/order_button" />

</LinearLayout>
</ScrollView>